# Autoclicker

./: .gitignore  CMakeLists.txt  README.md  autoBuild.bat
headers/: autoclicker.hpp  mouse_functions.hpp  timer_functions.hpp
source/: Autoclicker.cpp  mouse_functions.cpp  timer_functions.cpp
